2010-03-11  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: GetNameCore returning valie value when using
	ItemsSource.
	* SelectorItemAutomationPeer.cs: Using SL3 API for selecting items.

2010-02-26  Mario Carrion  <mcarrion@novell.com>

	* PopupAutomationPeer.cs:
	* ThumbAutomationPeer.cs:
	* SliderAutomationPeer.cs:
	* MediaElementAutomationPeer.cs:
	* RepeatButtonAutomationPeer.cs:
	  Removed partial class.

	r: toshok

2010-02-19  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: Fixes NRE in
	DataGridAutomationPeer. For BNC #567650

	r: toshok

2010-02-19  Brad Taylor  <brad@getcoded.net>

	* ItemAutomationPeer.cs:
	* ButtonBaseAutomationPeer.cs:
	* FrameworkElementAutomationPeer.cs: RaiseNameChanged should be called
	when any content changes, not just for Button and Item.

	r: jeff

2010-02-05  Brad Taylor  <brad@getcoded.net>

	* SliderAutomationPeer.cs: Return only LargeChange decrease, thumb and
	LargeChange increase from ChildrenCore.

	r: toshok

2010-01-26  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: Returning false in
	IsKeyboardFocusableCore when parent is null.

	r: alan

2010-01-25  Mario Carrion  <mcarrion@novell.com>

	* ItemAutomationPeer.cs: Removed properties: RealItem and
	RealItemsControlAutomationPeer. Fixed properties: Item and
	ItemsControlAutomationPeer to match MS implementation.
	* ItemsControlAutomationPeer.cs: Private method added: GetItem, used
	to get the children using internal method or indexer.
	* SelectorItemAutomationPeer.cs: Property removed:
	RealItemsControlAutomationPeer, not needed.

	r: alan

2010-01-08  Mario Carrion  <mcarrion@novell.com>

	* FrameworkElementAutomationPeer.cs: Fixes Bug #568627: IsOffscreen
	event not raised when Visibility changes 

	r: spouliot

2009-12-17  Mario Carrion  <mcarrion@novell.com>

	* ScrollBarAutomationPeer.cs: Fixes NRE when MoonAtkBridge is
	available.
	* ItemAutomationPeer.cs,