@@ -1,3 +1,11 @@
+2010-03-19  Mario Carrion  <mcarrion@novell.com>
+
+	* System.Windows.Automation.Peers/TabItemAutomationPeerTest.cs: Tests
+	fix when ItemContainerGenerator.ItemFromContainer returns
+	DependencyProperty.UnsetValue.
+
+	r: alan
+
 2010-03-11  Mario Carrion  <mcarrion@novell.com>
 
 	* System.Windows.Automation.Peers/ItemAutomationPeerTest.cs: Testing
